# flake_rigid

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  codemeta.json  paper.bib  paper.md  pyproject.toml
.github/workflows/: paper.yml  tests.yml
docs/: requirements.txt
docs/source/: 3-Barrier_from_string.ipynb  4-Dynamics.ipynb  cli_reference.rst  conf.py  contributing.rst  dynamic.rst  examples.rst  index.rst  installation.rst
example_cli/: README.md  analyze.py  params.yaml  run_tests.sh  string_roto.yaml  string_rototrasl.yaml  superlubricity.py  sweep_Fx.yaml  sweep_tau.yaml
examples/: 0-Substrate_types.ipynb  1-Cluster_creation.ipynb  2-Cluster_on_substrate.ipynb  3-Barrier_from_string.ipynb  4-Dynamics.ipynb  5-Scaling_laws.ipynb
examples/data/: MoS2.poscar
flake/: MD_rigid_rototrasl.py  __init__.py  cli.py  cluster.py  dynamics.py  integrator.py  io.py  maps.py  plot.py  static_barrier_string.py  static_roto_map.py  static_rototrasl_map.py  static_trasl_map.py  string_method.py  substrate.py  sweep.py
src/: cli.py  dynamics.py  maps.py  slides_io.py  string_method.py  sweep_md.py  tool_create_cluster.py  tool_create_substrate.py
test_cli_and_phys/: README.md  analyze.py  debug_ks.py  debug_map.py  debug_map2.py  debug_sin.py  grid_roto.yaml  grid_trasl.yaml  params.yaml  run_tests.sh  superlubricity.py  sweep_Fx.yaml  sweep_tau.yaml
tests/: conftest.py  profile_md.py  test_cli.py  test_cluster.py  test_dynamics.py  test_maps.py  test_physics.py  test_string_method.py  test_substrate.py  test_sweep_md.py  tmp.py
