[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flake-rigid"
version = "0.1.3"
authors = [
  { name="Andrea Silva", email="ansilva@sissa.it" },
]
description = "Friction and Lattice Analysis of Kinetics and Energetics: statics and overdamped Langevin dynamics of a 2D rigid cluster over a substrate."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "pyyaml",
    "h5py",
    "joblib",
]
keywords = ["simulation", "physics", "friction", "nanoscale-molecular-dynamics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flake*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (run with: pytest -m slow)",
]

[project.scripts]
flake = "flake.cli:main"

[project.urls]
"Homepage" = "https://flake-rigid.readthedocs.io/en/latest/"
"Source" = "https://github.com/LamaKing/flake_rigid"
